[package]
name = "morsewave"
version = "0.1.0"
edition = "2021"
description = "Retro-futuristic Morse code encoder/decoder built with Rust and WebAssembly"
repository = "https://github.com/chronocoder/morsewave"
license = "MIT"
authors = ["Chronocoder"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlButtonElement",
    "Storage",
    "AudioContext",
    "OscillatorType",
    "OscillatorNode",
    "GainNode",
    "AudioDestinationNode",
    "AudioParam",
] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true