[package]
name = "morsewave"
version = "0.1.0"
edition = "2021"
description = "High-performance Morse code encoder/decoder with WebAssembly support and Web Audio API playback"
repository = "https://github.com/ChronoCoders/morsewave"
homepage = "https://chronocoders.github.io/morsewave"
documentation = "https://docs.rs/morsewave"
readme = "README.md"
license = "MIT"
authors = ["ChronoCoders"]
keywords = ["morse", "morse-code", "wasm", "webassembly", "audio"]
categories = ["wasm", "multimedia::audio", "encoding", "web-programming"]
exclude = [
    "www/*",
    "docs/*",
    "target/*",
    "wiki/*",
    "*.bat",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlButtonElement",
    "Storage",
    "AudioContext",
    "OscillatorType",
    "OscillatorNode",
    "GainNode",
    "AudioDestinationNode",
    "AudioParam",
] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true